[package]
name = "azure_yubikey_auth"
version = "0.1.0"
edition = "2021"


[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.2.11", features = ["full"] }
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
azure_identity = "0.17.0"
azure_core = "0.17.0"
unicode-width = "0.1.11"
reqwest = { version ="0.11.22", features = ["json"] }

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
yubikey = "0.8.0"
base64 = "0.13.0"
sha2 = "0.10.8"
sha1 = "0.10.6"
x509-cert = "0.2.4"
async-trait = "0.1.74"
log = "0.4.20"

[dependencies.rsa]
version = "0.9.6"
features = ["sha2"]

[dependencies.der]
version = "0.7.8"
features = ["std", "pem"]

[dependencies.uuid]
version = "1.6.1"
default-features = false
features = ["v4", "serde"]

[dependencies.azure_identity]
version = "0.17.0"
default-features = false

[dependencies.azure_core]
version = "0.17.0"
default-features = false

[dependencies.time]
version = "0.3.30"
default-features = false